todo funciona bien
preguntas, respuestas, nuevas preguntas, agregar respuestas,
popularidad, cantidad de respuestas por pregunta.

--- a/askme/templates/detalle.html
+++ b/askme/templates/detalle.html
@@ -4,5 +4,11 @@
 {% endif %}
 
 {% for respuesta in pregunta.respuesta_set.all %}
-	<p>{{ respuesta.contenido }}</p><br />
+	<p>{{ respuesta.contenido|linebreaks }}</p><br />
 {% endfor %}
+
+<form action="" method="post">
+	{% csrf_token %}
+	{{ form.as_p }}
+	<input type="submit" value="Enviar Respuesta">
+</form>
