--- a/cuentas/templates/log_in.html
+++ b/cuentas/templates/log_in.html
@@ -1,6 +1,10 @@
 <h1>Login</h1>
-{% if message %}
-	<b>{{message}}</b>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
 {% endif %}
 {% if user.is_authenticated %}
 	<h3>Estas logueado como {{ user.username }} - <a href="{% url 'preguntas:preguntas' %}">Ir a las preguntas</a></h3>
@@ -10,5 +14,4 @@
 		{{form.as_p}}
 		<input type="submit" value="LogIn">
 	</form>	
-	<p>Registrate <a href="{% url 'cuentas:registrate' %}">Aqui</a></p>
 {% endif %}
