--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{% block titulo %} Preguntame!  {% endblock titulo %}</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/normalize.css">
-	<script type="text/javascript" src="../static/js/jquery-1.11.1.min.js"></script>
-	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/position.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
+	{% load staticfiles %}
+	<link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}">
+	<script type="text/javascript" src="{% static "js/jquery-1.11.1.min.js" %}"></script>
+	<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "css/position.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
 
 </head>
-<body>
 	<div class="container-fluid">
 		<div class="row all-header">
 			<div class="col-md-5">
@@ -23,8 +23,13 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="log">
-							<a class="log-area" href="#">Ingresa</a>
-							<a class="log-area" href="#">Registrate</a>
+							{% if user.is_authenticated %}
+								<a class="log-area" href="#">{{ user.username }}</a>
+								<a class="log-area" href="{% url 'cuentas:logout' %}">Salir</a>
+							{% else %}
+								<a class="log-area" href="#">Ingresa</a>
+								<a class="log-area" href="#">Registrate</a>
+							{% endif %}
 						</div>
 					</div>
 				</div>
@@ -50,66 +55,9 @@
 		</div>
 		<div class="row contenedor-principal">
 			<div class="col-md-9 main">
-				<div class="row">
-					<div class="col-md-10 col-md-offset-1 pregunta">
-						<div class="row shadow">
-							<div class="col-md-2 spotlight">
-								<div class="row">
-									<div id="respuestas" class="col-md-6" >
-										<h4>25</h4>
-										<p>Preguntas</p>
-									</div>
-									<div id="popularidad" class="col-md-6" >
-										<h4>122</h4>
-										<p>Popularidad</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-10 pregunta-contenido">
-								<h3><a href="#">¿Quieres hacer una pregunta mas larga?</a></h3>
-								<div class="pregunta-categoria">
-									<p><a href="#">Educación</a></p>
-								</div>
-								<div class="pregunta-fecha">
-									<p>25/02/2014</p>
-								</div>
-								<div class="pregunta-usuario">
-									<p>By <a href="#">Naffer</a> - 2451p</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-10 col-md-offset-1 pregunta">
-						<div class="row shadow">
-							<div class="col-md-2 spotlight">
-								<div class="row">
-									<div id="respuestas" class="col-md-6" >
-										<h4>8</h4>
-										<p>Preguntas</p>
-									</div>
-									<div id="popularidad" class="col-md-6" >
-										<h4>12</h4>
-										<p>Popularidad</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-10 pregunta-contenido-larga">
-								<h3><a href="#">¿Quieres hacer una pregunta mas larga aun mas largaaa aaaa?</a></h3>
-								<div class="pregunta-categoria">
-									<p><a href="#">Música</a></p>
-								</div>
-								<div class="pregunta-fecha">
-									<p>25/02/2014</p>
-								</div>
-								<div class="pregunta-usuario">
-									<p>By <a href="#">Naffer</a> - 2451p</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				{% block principal %}
+						
+				{% endblock principal %}
 			</div>
 			<div class="col-md-3 side">
 				<div class="titulo-side">
@@ -120,28 +68,12 @@
 					<p><a href="#">¿Pregunta?</a></p>
 					<p><a href="#">¿Pregunta?</a></p>
 				</div>
-				<div class="titulo-side">
-					<h4><a href="#">Nuevos</a></h4>
-				</div>
-				<div class="contenido-side">
-					<p><a href="#">¿Pregunta?</a></p>
-					<p><a href="#">¿Pregunta?</a></p>
-					<p><a href="#">¿Pregunta?</a></p>
-				</div>
-				<div class="titulo-side">
-					<h4><a href="#">Recomendados</a></h4>
-				</div>
-				<div class="contenido-side">
-					<p><a href="#">¿Pregunta?</a></p>
-					<p><a href="#">¿Pregunta?</a></p>
-					<p><a href="#">¿Pregunta?</a></p>
-				</div>
 			</div>
 		</div>
 	</div>
 	<footer>
 		<p>Creado por <a href="#">Naffer Reyes</a></p>
 	</footer>
-	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="{% static "js/bootstrap.min.js" %}"></script>
 </body>
 </html>
