--- a/cuentas/templates/register.html
+++ b/cuentas/templates/register.html
@@ -1,13 +1,10 @@
-<h1>Register</h1>
-{% if messages %}
-	<b>{{message}}</b>
-{% endif %}
-{% if user.is_authenticated %}
-	<h3>Estas registrado como - {{ user.username }} - <a href="{% url 'preguntas:preguntas' %}">Ir a las preguntas</a></h3>
-{% else %}
-	<form action="" method="post">
-		{% csrf_token %} 
-		{{form.as_p}}
-		<input type="submit" value="LogIn">
-	</form>	
-{% endif %}
+{% extends "login-register-base.html" %}
+{% block instancia %}
+	registro
+{% endblock instancia %}
+{% block header %}
+	Registro
+{% endblock header %}
+{% block submit %}
+	Registrarme
+{% endblock submit %}
