--- a/static/css/position.css
+++ b/static/css/position.css
@@ -41,7 +41,8 @@
 	padding-top: 10px;
 }
 
-.contenedor-principal {
+.contenedor-principal,
+.contenedor-principal-log {
 	padding-top: 0px;
 }
 
@@ -105,6 +106,22 @@
 	margin: 15px 0 15px 0;
 }
 /*END PREGUNTA*/
+/*LOGIN*/
+.registro-log {
+	text-align: center;
+	height: 77vh;
+	overflow: auto;
+}
+
+.registro-log h1 {
+	margin: 40px 0;
+}
+
+.form-group {
+    margin-bottom: 25px;
+}
+/*END LOGIN*/
+
 /*END CONTENT*/
 /*SIDE*/
 .side {
