--- a/askme/templates/lista_preguntas.html
+++ b/askme/templates/lista_preguntas.html
@@ -26,7 +26,10 @@
 								<p>25/02/2014</p>
 							</div>
 							<div class="pregunta-usuario">
-								<p>By <a href="#">{{ pregunta.usuario }}</a> - {{ pregunta.usuario.datosusuario.reputacion }}p</p>
+								<p><a href="#">{{ pregunta.usuario }}</a> - {{ pregunta.usuario.datosusuario.reputacion }}p</p>
+							</div>
+							<div class="pregunta-img">
+								<img src="../static/img/profile.png" alt="profile">
 							</div>
 						</div>
 					</div>
