--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,15 @@
 						<div id="menu-nav">
 							<ul class="nav navbar-nav">
 								<li><a href="#">PREGUNTAS</a></li>
-								<li><a href="#">CATEGORIAS</a></li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">CATEGORIAS <span class="caret"></span></a>
+					                <ul class="dropdown-menu" role="menu">
+					                  <li><a href="#">Action</a></li>
+					                  {% for categoria in categorias %}
+					                  	<li><a href="#">{{ categoria.titulo }}</a></li>					                  	
+					                  {% endfor %}
+					                </ul>
+						        </li>
 								<li><a href="#">USUARIOS</a></li>
 								<li><a href="#">ACERCA DE</a></li>
 								<li><a href="#">FAQ</a></li>
