--- a/askme/templates/detalle.html
+++ b/askme/templates/detalle.html
@@ -1,17 +1,58 @@
-<h1>{{ pregunta.asunto }}</h1>
-<h3>{{ pregunta.descripcion }}</h3>
-{% if error_message %}
-	<p><strong>{{ error_message }}</strong></p>
-{% endif %}
+{% extends "base_extendida.html" %}
+{% block contenido %}
+	<div class="col-md-12 pregunta-titulo">
+		<h2>¿{{ pregunta.asunto }}?</h2>
+	</div>
+	<div class="col-md-12 pregunta-detalle">
+		<h4>{{ pregunta.descripcion }}</h4>
+		<p><a href="#">{{ pregunta.usuario }}</a> - {{ respuesta.usuario.datosusuario.reputacion }}p</p>
+		<img src="../../static/img/profile.png" alt="profile">
+		<p>{{ pregunta.fecha_pub }}</p>
+	</div>
+	
+	<div class="col-md-12 respuestas">
+		<h3>{{ pregunta.respuesta_set.count }} Respuestas</h3>
+	</div>
+	{% comment %}
+		{% if error_message %}
+			<p><strong>{{ error_message }}</strong></p>
+		{% endif %}
+	{% endcomment %}
 
-{% for respuesta in pregunta.respuesta_set.all|dictsortreversed:'votos' %}
-	<p>{{ respuesta.contenido|linebreaks }}</p><br />
-	<p>Votos: {{ respuesta.votos }} - Usuario: {{ respuesta.usuario.username }} - Reputacion: {{ respuesta.usuario.datosusuario }} </p>
-	<p><a href="{% url 'preguntas:plus' respuesta.id %}">Mas</a> - <a href="{% url 'preguntas:minus' respuesta.id %}">Menos</a></p><br />
-{% endfor %}
+	{% for respuesta in pregunta.respuesta_set.all|dictsortreversed:'votos' %}
+		<div class="col-md-12 answer">
+			<p>{{ respuesta.contenido|linebreaks }}</p><br />
+			<div class="answer-info">
+				<p><a href="#">{{ respuesta.usuario }}</a> - {{ respuesta.usuario.datosusuario.reputacion }}p</p>
+				<img src="../../static/img/profile.png" alt="profile">
+				<p>{{ respuesta.respuesta_fecha_pub }}</p>
+			</div>
+			<div class="votos">
+				<p>{{ respuesta.votos }} - Votos</p> 
+				<p><a href="{% url 'preguntas:plus' respuesta.id %}"><img src="../../static/img/thumbs-up.bmp" alt="up"></a> - <a href="{% url 'preguntas:minus' respuesta.id %}"><img src="../../static/img/thumbs-down.bmp" alt="down"></a></p>
+			</div>
+		</div>
+		
+	{% endfor %}
+	<div class="col-md-12">
+		{% if user.is_authenticated %}
+			<a id="responder" class="btn btn-default boton-res">Responder</a>
+		{% else %}
+			<a href="{% url 'cuentas:login' %}" class="btn btn-default boton-res">Accede para responder</a>
+		{% endif %}
+	</div>
+	
 
-<form action="" method="post">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<input type="submit" value="Enviar Respuesta">
-</form>
+	<div id="form-responder" class="responder col-md-12">
+		<form action="" method="post">
+		{% csrf_token %}
+		{% for field in form %}
+			<div class="">
+				<label for="id_{{ field.name }}" class="control-label">Comentario: </label>
+				{{ field }}
+			</div>
+		{% endfor %}
+		<input class="btn verde" type="submit" value="Enviar Respuesta">
+	</form>
+	</div>
+{% endblock %}
