--- a/askme/templates/lista_preguntas.html
+++ b/askme/templates/lista_preguntas.html
@@ -22,14 +22,14 @@
 							<div class="pregunta-categoria">
 								<p><a href="#">{{ pregunta.categoria }}</a></p>
 							</div>
-							<div class="pregunta-fecha">
-								<p>25/02/2014</p>
-							</div>
 							<div class="pregunta-usuario">
 								<p><a href="#">{{ pregunta.usuario }}</a> - {{ pregunta.usuario.datosusuario.reputacion }}p</p>
 							</div>
 							<div class="pregunta-img">
 								<img src="../static/img/profile.png" alt="profile">
+							</div>
+							<div class="pregunta-fecha">
+								<p>{{ pregunta.fecha_pub }}</p>
 							</div>
 						</div>
 					</div>
