--- a/static/css/position.css
+++ b/static/css/position.css
@@ -137,6 +137,75 @@
 	margin-left: 15px;
 }
 /*END SIDE*/
+/*DETAIL*/
+#id_contenido {
+	width: 600px;
+}
+
+.pregunta-detalle p,
+.pregunta-detalle img,
+.answer-info p,
+.answer-info img {
+	float: right;
+	margin-right: 5px;
+}
+
+.pregunta-detalle h4 {
+	margin: 30px;
+}
+
+.pregunta-detalle img,
+.answer-info img {
+	width: 15px;
+	height: 20px;
+}
+
+.respuestas {
+	margin: 20px 0;
+}
+
+.answer {
+	margin: 10px 0;
+}
+
+.answer > p {
+	margin-top: 15px;
+}
+
+.votos {
+	width: 150px;
+	height: 30px;
+	padding: 4px 0 0px 10px;
+	margin: 0;
+	position: relative;
+	left: -14px;
+	top: 0;
+}
+
+.votos p {
+	float: left;
+}
+
+.votos p:first-child {
+	margin-right: 10px;
+}
+
+.votos img {
+	height: 23px;
+	width: 23px;
+	border-radius: 100%;
+}
+
+.boton-res {
+	height: 50px;
+	width: auto;
+	margin: 30px 40%;
+}
+
+.responder {
+	padding: 20px 10px;
+}
+/*END DETAIL*/
 /*FOOTER*/
 footer {
 	height: 100px;
