--- a/askme/templates/askme/_side.html
+++ b/askme/templates/askme/_side.html
@@ -4,7 +4,7 @@
 
 {% if object %}
 	<div class="titulo-side">
-		<h5><a href="#">Relacionados</a></h5>
+		<h5><a href="#">Relacionadas</a></h5>
 	</div>
 	<div class="contenido-side">
 		{% for ask in related_list %}
@@ -25,7 +25,7 @@
 </div>
 
 <div class="titulo-side">
-	<h5><a href="#">Nuevos</a></h5>
+	<h5><a href="#">Nuevas</a></h5>
 </div>
 <div class="contenido-side">
 	{% for ask in news_list %}
