--- a/askme/templates/askme/_asks.html
+++ b/askme/templates/askme/_asks.html
@@ -18,10 +18,10 @@
 			<div class="col-md-10 pregunta-contenido">
 				<h3><a href="{{ object.get_absolute_url }}">{{ object.issue }}</a></h3>
 				<div class="pregunta-categoria">
-					<p><a href="#">{{ object.category }}</a></p>
+					<p><a href="{% url 'askme:category' object.category.slug %}">{{ object.category }}</a></p>
 				</div>
 				<div class="pregunta-usuario">
-					<p><a href="#">{{ object.user }}</a> - {{ object.user.details.rating }}p</p>
+					<p><a href="{% url 'accounts:profile' object.user.id object.user.username %}">{{ object.user }}</a> - {{ object.user.details.rating }}p</p>
 				</div>
 				<div class="pregunta-img">
 					<img src="{% static 'img/profile.png' %}" alt="profile">
