--- a/askme/templates/askme/ask_detail.html
+++ b/askme/templates/askme/ask_detail.html
@@ -15,7 +15,7 @@
 	</div>
 	<div class="col-md-12 pregunta-detalle">
 		<h4>{{ object.description }}</h4>
-		<p><a href="#">{{ object.user }}</a> - {{ object.user.details.rating }}p</p>
+		<p><a href="{% url 'accounts:profile' object.user.id object.user.username %}">{{ object.user }}</a> - {{ object.user.details.rating }}p</p>
 		<img src="{% static 'img/profile.png' %}" alt="profile">
 		<p>{{ object.pub_date|date:"d/M/Y - P" }}</p>
 	</div>
@@ -28,7 +28,7 @@
 		<div class="col-md-12 answer">
 			<p>{{ answer.content|linebreaks }}</p><br />
 			<div class="answer-info">
-				<p><a href="#">{{ answer.user }}</a> - {{ answer.user.details.rating }}p</p>
+				<p><a href="{% url 'accounts:profile' answer.user.id answer.user.username %}">{{ answer.user }}</a> - {{ answer.user.details.rating }}p</p>
 				<img src="{% static "img/profile.png" %}" alt="profile">
 				<p>{{ answer.answer_pub_date|date:"d/M/Y - P" }}</p>
 			</div>
