--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,7 @@
 /*END HEADER*/
 /*CONTENT*/
 .contenedor-principal {
-	background-color: #F8F8F8;
+	background-color: #F5F5F5;
 }
 
 .contenedor-principal-log {
@@ -214,7 +214,7 @@ input[type='email'] {
 }
 
 .side {
-	background-color: #F8F8F8;
+	background-color: #F5F5F5;
 	font-family: Verdana;
 }
 
@@ -239,8 +239,10 @@ input[type='email'] {
 }
 
 .pregunta-detalle,
-.answer {
+.answer,
+#form-responder {
 	background-color: #F8F8F8;
+	box-shadow: 1px 1px 1px #e5e5e5;
 }
 
 .votos {
@@ -249,13 +251,13 @@ input[type='email'] {
 	color: #fff;
 	font-weight: bold;
 }
-
-.boton-res {
-	background-color: #44B78B;
-	color: #fff;
-	font-size: 1.5em;
-}
 /*END DETAIL*/
+/*PROFILE*/
+.user_name {
+	font-size: 0.9em;
+	font-weight: bold;
+}
+/*END PROFILE*/
 /*FOOTER*/
 footer {
 	background-color: #1e7145;
