--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 	<title>{% block title %}Preguntame!{% endblock title %}</title>
 	{% load staticfiles %}
+	<link rel="shortcut icon" href="{% static 'img/askme-favicon.ico' %}" >
 	<link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}">
 	<script type="text/javascript" src="{% static "js/jquery-1.11.1.min.js" %}"></script>
-	<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-	<link rel="stylesheet" type="text/css" href="{% static "css/position.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "css/position.css" %}">
 
 </head>
 	<div class="container-fluid">
@@ -24,6 +25,7 @@
 					<div class="col-md-12">
 						<div class="log">
 							{% if user.is_authenticated %}
+								<img id="user-img" src="{% static 'img/profile.png' %}" alt="profile">
 								<a class="log-area" href="#">{{ user.username }}</a>
 								<a class="log-area" href="{% url 'accounts:logout' %}">Salir</a>
 							{% else %}
@@ -40,10 +42,10 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PREGUNTAS <span class="caret"></span></a>
 					                <ul class="dropdown-menu" role="menu">
-					                  <li><a href="#">Todas</a></li>
-					                  <li><a href="#">Populares</a></li>
-					                  <li><a href="#">Nuevas</a></li>
-					                  <li><a href="#">Preguntar</a></li>
+					                  <li><a href="{% url 'askme:asks' %}">Todas</a></li>
+					                  <li><a href="?order=popularity">Populares</a></li>
+					                  <li><a href="?order=news">Nuevas</a></li>
+					                  <li><a href="{% url 'askme:create' %}">Preguntar</a></li>
 					                </ul>
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">CATEGORIAS <span class="caret"></span></a>
