--- a/accounts/templates/accounts/profile_detail.html
+++ b/accounts/templates/accounts/profile_detail.html
@@ -4,7 +4,7 @@
 {% block main %}
 	<div class="row">
 		<div class="col-sm-3">
-			<img src="{% static 'img/profile.png' %}" alt="profile" class="img-thumbnail">
+			<img src="{{ object.profile_image.url }}" alt="profile" class="img-thumbnail">
 		</div>
 		<div class="col-sm-4">
 			<div class="panel panel-success">
@@ -14,7 +14,7 @@
 					</p>
 				</div>
 				<div class="panel-body panel-height">
-					<p>Reputacion: {{ object.details.rating }}p</p>
+					<p>Reputacion: {{ object.rating }}p</p>
 					<p>Correo: {{ object.email }}</p>
 					<p>Respuestas:</p>
 					<p>Preguntas:</p>
@@ -28,6 +28,7 @@
 					Acerca de mi
 				</div>
 				<div class="panel-body panel-height">
+					<p>{{ object.about_me }}</p>
 				</div>
 			</div>
 		</div>
@@ -46,7 +47,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">Respuestas</div>
 				<ul class="list-group">
-					{% for answer in object.answers.all|slice:':5' %}
+					{% for answer in profile_user.answers.all|slice:':5' %}
 						<li class="list-group-item"><strong>En</strong> <a href="#" class="list-group-item-heading">{{ answer.ask.issue }}</a><p class="list-group-item-text"><strong>Respondio: </strong>{{ answer.content|truncatechars:80 }}</p></li>
 					{% empty %}
 						<li class="list-group-item">
@@ -60,7 +61,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">Preguntas</div>
 				<ul class="list-group">
-					{% for ask in object.asks.all|slice:':10' %}
+					{% for ask in profile_user.asks.all|slice:':10' %}
 						<li class="list-group-item"><a href="#">{{ ask.issue }}</a></li>
 					{% empty %}
 						<li class="list-group-item">
@@ -72,3 +73,8 @@
 		</div>
 	</div>
 {% endblock main %}
+{% block side %}
+{% if user == profile_user %}
+	<h4><a href="{% url 'accounts:update' object.id %}">Actalizar perfil</a></h4>
+{% endif %}
+{% endblock side %}
