--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -26,7 +26,7 @@
 						<div class="log">
 							{% if user.is_authenticated %}
 								<img id="user-img" src="{% static 'img/profile.png' %}" alt="profile">
-								<a class="log-area" href="#">{{ user.username }}</a>
+								<a class="log-area" href="{% url 'accounts:profile' user.id user.username %}">{{ user.username }}</a>
 								<a class="log-area" href="{% url 'accounts:logout' %}">Salir</a>
 							{% else %}
 								<a class="log-area" href="{% url 'accounts:login' %}">Ingresa</a>
