--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -6,7 +6,10 @@
 
 {% block main %}
 <div class="row">
-	<div class="col-sm-6">
+	<div class="col-sm-6 col-sm-offset-2">
+		<div class="header">
+			<h3>Regístrate</h3>
+		</div>
 		{% crispy form %}
 	</div>
 </div>
