--- a/askme/templates/askme/ask_form.html
+++ b/askme/templates/askme/ask_form.html
@@ -1,10 +1,16 @@
 {% extends "_layouts/base.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
+
 {% block title %}
 	Crear Pregunta | {{ block.super }}
 {% endblock title %}
 
 {% block main %}
+<script type="text/javascript" src="{% static 'js/nicEdit.js' %}"></script>
+<script type="text/javascript">
+	bkLib.onDomLoaded(function() { nicEditors.allTextAreas() });
+</script>
 <div class="row">
 	<div class="col-sm-6">
 		{% crispy form %}
