--- a/askme/templates/askme/ask_list.html
+++ b/askme/templates/askme/ask_list.html
@@ -10,6 +10,23 @@
 	{% for object in object_list %}
 		{% include "askme/_asks.html" %}	
 	{% endfor %}
+	<div class="pagination-div">
+		<ul class="pagination">
+			{% if page_obj.has_previous %}
+				<li><a href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+			{% endif %}
+			{% for pg in paginator.page_range %}
+				{% if page_obj.number == pg %}
+					<li class="active"><a href="?page={{ pg }}">{{ pg }}</a></li>
+				{% else %}
+					<li><a href="?page={{ pg }}">{{ pg }}</a></li>
+				{% endif %}
+			{% endfor %}
+			{% if page_obj.has_next %}
+				<li><a href="?page={{ page_obj.next_page_number }}">Next</a></li>
+			{% endif %}
+		</ul>
+	</div>
 {% endblock main %}
 
 {% block side %}
