--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -10,29 +10,38 @@
 	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/position.css" %}">
-
+	{% block head %}
+		
+	{% endblock head %}
 </head>
 	<div class="container-fluid">
 		<div class="row all-header">
-			<div class="col-md-4 col-sm-12">
+			<div class="col-lg-6 col-md-5 col-sm-12">
 				<div class="navbar-header">
 					<a id="brand" class="navbar-brand" href="{% url 'askme:asks' %}"><strong>?</strong>reguntame</a>
 					<p id="slogan">LA COMUNIDAD LO SABE TODO <br>Y ESTAN DISPUESTOS A AYUDARTE!</p>
 				</div>
 			</div>
-			<div class="col-md-8 col-sm-12">
+			<div class="col-lg-6 col-md-7 col-sm-12">
 				<div class="row">
-					<div class="col-md-12">
-						<div class="log">
-							{% if user.is_authenticated %}
-								<img id="user-img" src="{% static 'img/profile.png' %}" alt="profile">
-								<a class="log-area" href="{% url 'accounts:profile' user.id user.username %}">{{ user.username }}</a>
-								<a class="log-area" href="{% url 'accounts:logout' %}">Salir</a>
-							{% else %}
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						{% if user.is_authenticated %}
+							<ul class="nav navbar-nav navbar-right">
+								<li class="dropdown"><a id="user-option" href="#" class="dropdown-toggle" data-toggle="dropdown"><img id="user-img" src="{{ user.details.profile_image.url }}" alt="profile"> {{ user.username }} <b class="caret"></b></a>
+				                    <ul class="dropdown-menu">
+				                        <li><a href="{% url 'accounts:profile' user.details.id user.username %}">Perfil</a></li>
+				                        <li><a href="#">Opciones</a></li>
+				                        <li class="divider"></li>
+				                        <li><a href="{% url 'accounts:logout' %}">Salir</a></li>
+				                    </ul>
+				                </li>
+							</ul>
+						{% else %}
+							<div class="anonymous">
 								<a class="log-area" href="{% url 'accounts:login' %}">Ingresa</a>
-								<a class="log-area" href="{% url 'accounts:signup' %}">Registrate</a>
-							{% endif %}
-						</div>
+								<a class="log-area" href="{% url 'accounts:signup' %}">Regístrate</a>
+							</div>							
+						{% endif %}
 					</div>
 				</div>
 				<div class="row">
@@ -43,8 +52,9 @@
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PREGUNTAS <span class="caret"></span></a>
 					                <ul class="dropdown-menu" role="menu">
 					                  <li><a href="{% url 'askme:asks' %}">Todas</a></li>
-					                  <li><a href="?order=popularity">Populares</a></li>
-					                  <li><a href="?order=news">Nuevas</a></li>
+					                  <li><a href="{% url 'askme:asks' %}?order=popularity">Populares</a></li>
+					                  <li><a href="{% url 'askme:asks' %}?order=news">Nuevas</a></li>
+					                  <li class="divider"></li>
 					                  <li><a href="{% url 'askme:create' %}">Preguntar</a></li>
 					                </ul>
 								<li class="dropdown">
@@ -53,7 +63,7 @@
 					                  {% include "_layouts/_categories.html" %}
 					                </ul>
 						        </li>
-								<li><a href="#">USUARIOS</a></li>
+								<li><a href="{% url 'accounts:users' %}">USUARIOS</a></li>
 								<li><a href="#">ACERCA DE</a></li>
 								<li><a href="#">FAQ</a></li>
 							</ul>
@@ -63,14 +73,14 @@
 			</div>
 		</div>
 	</div>
-	{% if messages %}
-		<ul class="messages">
-			{% for message in messages %}
-				<li {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
-			{% endfor %}
-		</ul>
-	{% endif %}
 	<div class="container">
+		{% if messages %}
+			<div class="messages">
+				{% for message in messages %}
+					<div id="alert-message" {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</div>
+				{% endfor %}
+			</div>
+		{% endif %}
 		{% block route %}
 			
 		{% endblock route %}
